--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"karma-jasmine": "^4.0.2",
 		"karma-sourcemap-loader": "^0.3.8",
 		"karma-webpack": "^5.0.0",
-		"style-loader": "^3.3.1",
+		"mini-css-extract-plugin": "^2.7.2",
 		"webpack": "^5.73.0",
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.9.2",
