--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"whatwg-fetch": "^3.6.2"
 	},
 	"dependencies": {
-		"regenerator-runtime": "^0.13.9"
+		"regenerator-runtime": "^0.13.9",
+		"sweetalert2": "^11.7.2"
 	}
 }
