--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"scripts": {
 		"start-dev": "webpack-dev-server --config webpack.dev.js",
 		"build": "webpack --config webpack.prod.js",
+		"serve": "http-server dist --port 9000",
+		"build-serve": "npm run build && npm run serve",
 		"test": "karma start",
 		"lint": "eslint ./src"
 	},
@@ -24,11 +26,13 @@
 		"@babel/core": "^7.18.5",
 		"@babel/preset-env": "^7.18.2",
 		"babel-loader": "^8.2.5",
+		"clean-webpack-plugin": "^4.0.0",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.1",
 		"eslint": "^8.32.0",
 		"eslint-config-google": "^0.14.0",
 		"html-webpack-plugin": "^5.5.0",
+		"http-server": "^14.1.1",
 		"jasmine-ajax": "^4.0.0",
 		"jasmine-core": "^4.2.0",
 		"karma": "^5.2.3",
@@ -42,10 +46,12 @@
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.9.2",
 		"webpack-merge": "^5.8.0",
-		"whatwg-fetch": "^3.6.2"
+		"whatwg-fetch": "^3.6.2",
+		"workbox-webpack-plugin": "^6.5.4"
 	},
 	"dependencies": {
 		"regenerator-runtime": "^0.13.9",
-		"sweetalert2": "^11.7.2"
+		"sweetalert2": "^11.7.2",
+		"workbox-window": "^6.5.4"
 	}
 }
