menambahkan favorite page dan Index DB

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"workbox-webpack-plugin": "^6.5.4"
 	},
 	"dependencies": {
+		"idb": "^7.1.1",
 		"regenerator-runtime": "^0.13.9",
 		"sweetalert2": "^11.7.2",
 		"workbox-window": "^6.5.4"
