--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "katalog-restoran",
+	"name": "restaurant-apps",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -9,7 +9,8 @@
 		"serve": "http-server dist --port 9000",
 		"build-serve": "npm run build && npm run serve",
 		"test": "karma start",
-		"lint": "eslint ./src"
+		"lint": "eslint ./src",
+		"e2e": "codeceptjs run --steps"
 	},
 	"keywords": [],
 	"author": "Fawwaz Musytaqul Umam <fawwazmusytaqulumam@gmail.com>",
@@ -27,6 +28,7 @@
 		"@babel/preset-env": "^7.18.2",
 		"babel-loader": "^8.2.5",
 		"clean-webpack-plugin": "^4.0.0",
+		"codeceptjs": "^3.4.1",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.1",
 		"eslint": "^8.32.0",
@@ -35,13 +37,14 @@
 		"http-server": "^14.1.1",
 		"jasmine-ajax": "^4.0.0",
 		"jasmine-core": "^4.2.0",
-		"karma": "^5.2.3",
+		"karma": "^6.4.1",
 		"karma-chrome-launcher": "^3.1.1",
 		"karma-firefox-launcher": "^2.1.2",
 		"karma-jasmine": "^4.0.2",
 		"karma-sourcemap-loader": "^0.3.8",
 		"karma-webpack": "^5.0.0",
 		"mini-css-extract-plugin": "^2.7.2",
+		"puppeteer": "^19.7.5",
 		"webpack": "^5.73.0",
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.9.2",
@@ -52,7 +55,7 @@
 	"dependencies": {
 		"idb": "^7.1.1",
 		"regenerator-runtime": "^0.13.9",
-		"sweetalert2": "^11.7.2",
+		"sweetalert2": "^11.4.8",
 		"workbox-window": "^6.5.4"
 	}
 }
