--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"build-serve": "npm run build && npm run serve",
 		"test": "karma start",
 		"lint": "eslint ./src",
-		"e2e": "codeceptjs run --steps"
+		"e2e": "codeceptjs run --steps",
+		"build-image": "node sharp.js"
 	},
 	"keywords": [],
 	"author": "Fawwaz Musytaqul Umam <fawwazmusytaqulumam@gmail.com>",
@@ -35,6 +36,8 @@
 		"eslint-config-google": "^0.14.0",
 		"html-webpack-plugin": "^5.5.0",
 		"http-server": "^14.1.1",
+		"imagemin-mozjpeg": "^9.0.0",
+		"imagemin-webpack-plugin": "^2.4.2",
 		"jasmine-ajax": "^4.0.0",
 		"jasmine-core": "^4.2.0",
 		"karma": "^6.4.1",
@@ -45,6 +48,7 @@
 		"karma-webpack": "^5.0.0",
 		"mini-css-extract-plugin": "^2.7.2",
 		"puppeteer": "^19.7.5",
+		"sharp": "^0.31.3",
 		"webpack": "^5.73.0",
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.9.2",
@@ -54,6 +58,7 @@
 	},
 	"dependencies": {
 		"idb": "^7.1.1",
+		"lazysizes": "^5.3.2",
 		"regenerator-runtime": "^0.13.9",
 		"sweetalert2": "^11.4.8",
 		"workbox-window": "^6.5.4"
