--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"codeceptjs": "^3.4.1",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.1",
+		"css-minimizer-webpack-plugin": "^4.2.2",
 		"eslint": "^8.32.0",
 		"eslint-config-google": "^0.14.0",
 		"html-webpack-plugin": "^5.5.0",
